# NetworkManager

./: .gitignore  .gitlab-ci.yml  Cargo.toml  Makefile.am  README.md  TODO
.gitlab/: centos.yml  ci.yml
clients/common/: nm-secret-agent-simple.c
packaging/: NetworkManager.service
src/cli/: Cargo.toml  apply.rs  diff.rs  error.rs  main.rs  merge.rs  show.rs  state.rs  wait.rs  wifi.rs
src/daemon/: Cargo.toml  api.rs  apply.rs  commander.rs  conf_manager.rs  conf_worker.rs  config.rs  daemon.rs  dhcp.rs  dhcp_manager.rs  dhcp_worker.rs  event.rs  listener.rs  lock.rs  logger.rs  main.rs  monitor_manager.rs  monitor_worker.rs  plugin.rs  query.rs  share_data.rs  task.rs  worker.rs
src/daemon/conf/: conf_manager.rs  conf_worker.rs  mod.rs
src/daemon/dhcp/: dhcp_manager.rs  dhcp_worker.rs  mod.rs
src/daemon/monitor/: mod.rs  monitor_manager.rs  monitor_worker.rs
src/daemon/net_state/: apply.rs  mod.rs  query.rs
src/daemon/plugin/: mod.rs  plugin_exec.rs  plugin_manager.rs  plugin_worker.rs
src/devices/: nm-acd-manager.c  nm-device.c
src/libnm/: Cargo.toml  client.rs  error.rs  event.rs  ipc.rs  lib.rs  logging.rs  msg.rs  result.rs  uuid.rs
src/libnm-derive/: Cargo.toml  lib.rs
src/libnm-plugin/: Cargo.toml  client.rs  info.rs  lib.rs  listener.rs  plugin_trait.rs
src/libnm/nmstate/: deserializer.rs  iface.rs  iface_state.rs  iface_trait.rs  iface_type.rs  ip.rs  mod.rs  net_state.rs  route.rs  state_options.rs  value.rs
src/libnm/nmstate/gen_diff/: base_iface.rs  inter_iface.rs  net_state.rs
src/libnm/nmstate/ifaces/: base.rs  bond.rs  bridge_vlan.rs  ethernet.rs  inter_ifaces.rs  linux_bridge.rs  loopback.rs  mod.rs  ovs_bridge.rs  ovs_iface.rs  vlan.rs  wifi.rs
src/libnm/nmstate/merged/: base_iface.rs  controller.rs  ethernet.rs  iface.rs  inter_iface.rs  ip.rs  mod.rs  net_state.rs  route.rs  wifi.rs
src/libnm/nmstate/revert/: iface.rs  inter_ifaces.rs  net_state.rs  value.rs
src/libnm/nmstate/unit_tests/: ip.rs  mod.rs
src/libnm/no_daemon/: apply.rs  base_iface.rs  bond.rs  dhcp.rs  error.rs  ethernet.rs  iface.rs  inter_ifaces.rs  ip.rs  linux_bridge.rs  linux_bridge_port_vlan.rs  mod.rs  query.rs  route.rs  vlan.rs  watcher.rs  wifi.rs
src/libnm/no_daemon/ovs/: db.rs  json_rpc.rs  mod.rs  query.rs
src/libnm/no_daemon/wifi/: apply.rs  bss.rs  dbus.rs  dbus_macros.rs  interface.rs  mod.rs  network.rs  query.rs  scan.rs
src/libnm/tests/: mod.rs  wifi.rs
src/nmstate/: Cargo.toml  deserializer.rs  error.rs  iface.rs  iface_state.rs  iface_trait.rs  iface_type.rs  ip.rs  lib.rs  net_state.rs  state_options.rs
src/nmstate-derive/: Cargo.toml  lib.rs
src/nmstate/gen_diff/: inter_iface.rs  net_state.rs
src/nmstate/ifaces/: base.rs  ethernet.rs  inter_ifaces.rs  loopback.rs  mod.rs  ovs_bridge.rs  ovs_iface.rs  unknown.rs
src/nmstate/merged/: iface.rs  inter_iface.rs  net_state.rs
src/nmstate/revert/: iface.rs  net_state.rs
src/nmstate/unit_tests/: mod.rs
src/platform/: nm-platform.c
src/plugin-demo/: Cargo.toml  main.rs  plugin.rs
src/plugin-ovs/: Cargo.toml  main.rs  plugin.rs  show.rs
src/plugin-ovs/ovsdb/: db.rs  json_rpc.rs  method.rs  mod.rs  operation.rs  show.rs
src/plugin-wifi/: Cargo.toml  README.md  apply.rs  bss.rs  dbus.rs  dbus_macros.rs  interface.rs  main.rs  network.rs  plugin.rs  show.rs
src/python-libnm/: setup.py
src/python-libnm/libnm/: __init__.py  client.py  cmd.py  error.py  log.py
src/python-libnm/libnm/nmstate/: __init__.py  apply.py  show.py  state_option.py
src/settings/: nm-settings-plugin.c  nm-settings-plugin.h  nm-settings-storage.c  nm-settings-storage.h
src/settings/plugins/keyfile/: nms-keyfile-plugin.c  nms-keyfile-reader.c  nms-keyfile-utils.c  nms-keyfile-utils.h
src/settings/plugins/keyfile/tests/: test-keyfile.c
src/systemd/: nm-sd-utils.c  nm-sd-utils.h
tests/: conftest.py  run-tests.sh  test_bond.py  test_cli.py  test_daemon_connection.py  test_linux_bridge.py  test_loopback.py  test_veth.py  test_vlan.py  test_wifi.py
tests/testlib/: apply.py  cmdlib.py  dhcp.py  env.py  statelib.py  veth.py  wifi.py
