[workspace]
resolver = "2"
members = [
    "src/cli",
    "src/daemon",
    "src/libnm",
    "src/libnm-plugin",
    "src/nmstate",
    "src/plugin-ovs",
]

[workspace.package]
version = "0.1.0"
authors = ["Gris Ge"]
description = "Linux Network Management Tool"
documentation = "https://gitlab.freedesktop.org/NetworkManager/NetworkManager/"
edition = "2024"
license = "Apache-2.0"
# Needed by `str::from_utf8()`
rust-version = "1.87"

[workspace.dependencies]
serde = { version = "1.0.144", features = ["derive"] }
env_logger = "0.11.0"
log = "0.4.17"
serde_json = "1.0.87"
serde_yaml = "0.9.27"
uuid = { version = "1.6.1", default-features = false, features = ["std", "v7"] }
futures = {version = "0.3.29", features = [ "std" ] }
clap = { version = "4.5", features = [ "cargo"] }
nispor = { version = "1.2" }
chrono = { version = "0.4" , features = ["serde"] }
rand = { version = "0.9" }


[workspace.dependencies.tokio]
version ="1.35.0"
features = ["net", "io-util", "rt", "rt-multi-thread", "macros", "sync", "time"]

[workspace.dependencies.nix]
version = "0.30.0"
default-features = false
features = ["feature", "hostname"]

[workspace.dependencies.mozim]
version = "0.2.2"

[workspace.dependencies.rtnetlink]
version = "0.17.1"

[workspace.dependencies.futures_channel]
version = "0.3.30"
