[package]
name = "nmc"
version.workspace = true
authors.workspace = true
description = "Command line tool for communicating with NetworkManager daemon"
documentation.workspace = true
edition.workspace = true
license = "GPL-3.0-or-later"
rust-version.workspace = true

[dependencies]
serde = { workspace = true }
env_logger = { workspace = true }
log = { workspace = true }
serde_yaml = { workspace = true }
tokio = { workspace = true }
nm = { path = "../libnm" }
futures-util = { workspace = true }
futures-channel = { workspace = true }
uuid = { workspace = true }
clap = { workspace = true }
nix = { workspace = true, features = ["term"] }

[[bin]]
name = "nmc"
path = "main.rs"
