[package]
name = "networkmanagerd"
version.workspace = true
authors.workspace = true
description = "The daemon of NetworkManager"
documentation.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
nm = { path = "../libnm" }
nm_plugin = { path = "../libnm-plugin" }
nmstate = { path = "../nmstate" }
serde = { workspace = true }
env_logger = { workspace = true }
log = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
futures = { workspace = true }
uuid = { workspace = true }

[[bin]]
name = "NetworkManager"
path = "main.rs"
