[package]
name = "libnm_derive"
version.workspace = true
authors.workspace = true
description = "derives of libnm"
documentation.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
syn = { workspace = true }
quote = { workspace = true }

[lib]
name = "libnm_derive"
path = "lib.rs"
proc-macro = true
