[package]
name = "nm"
version.workspace = true
authors.workspace = true
description.workspace = true
documentation.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
log = { workspace = true }
rand = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
uuid = { workspace = true }
nmstate = { "path" = "../nmstate" }
nmstate_derive = { "path" = "../nmstate-derive" }
nispor = { workspace = true }

[lib]
name = "nm"
path = "lib.rs"
