[package]
name = "nm"
version.workspace = true
authors.workspace = true
description.workspace = true
documentation.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
libnm_derive = { "path" = "../libnm-derive" }
log = { workspace = true }
rand = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
tokio = { workspace = true }
uuid = { workspace = true }
nispor = { workspace = true }
rtnetlink = { workspace = true }
futures-util = { workspace = true }
zbus = { workspace = true }
zvariant = { workspace = true }
wl-nl80211 = { workspace = true }
nix = { workspace = true }

[lib]
name = "nm"
path = "lib.rs"
