[package]
name = "nmstate"
version.workspace = true
authors.workspace = true
description = "Declarative API for Host Network Management"
documentation.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
env_logger = { workspace = true }
log = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
tokio = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }

[lib]
name = "nmstate"
path = "lib.rs"
