[package]
name = "NetworkManager-plugin-ovs"
version.workspace = true
authors.workspace = true
description = "OpenvSwitch plugin of NetworkManager"
documentation.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
env_logger = { workspace = true }
log = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
nm = { path = "../libnm" }
nm_plugin = { path = "../libnm-plugin" }

[[bin]]
name = "NetworkManager-plugin-ovs"
path = "main.rs"
