[package]
name = "NetworkManager-plugin-wifi"
version.workspace = true
authors.workspace = true
description = "WiFi plugin of NetworkManager based on wpa_suppliant"
documentation.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
env_logger = { workspace = true }
log = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
zbus = { workspace = true }
zvariant = { workspace = true }
nm = { path = "../libnm" }
nm_plugin = { path = "../libnm-plugin" }

[[bin]]
name = "NetworkManager-plugin-wifi"
path = "main.rs"
